--- a/app_base/src/main/res/values/strings.xml
+++ b/app_base/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     </string-array>
 
 
+    <string name="wzhzjqeds">为中华之崛起而读书12ab</string>
     <string name="brbc">八荣八耻~\n
 以热爱祖国为荣，以危害祖国为耻；\n
 以服务人民为荣，以背离人民为耻；\n
