--- a/demo_provider/app_provider_provider/src/main/res/values/strings.xml
+++ b/demo_provider/app_provider_provider/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">app_provider_provider</string>
+    <string name="app_name">provider_provider</string>
 </resources>
